[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Player/cowboy_headless.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/PlayerHead.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Shared/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Player/Dash.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Audio/laserShoot (1).wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/powerUp.wav" type="AudioStream" id=8]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color    = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/active = false

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color    = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0

[sub_resource type="Animation" id=14]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_death_animation_finished"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=11]
length = 0.001

[sub_resource type="Animation" id=7]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerHead/Head:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerHead/Head:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( 1, 2 )
texture = ExtResource( 1 )
hframes = 10

[node name="PlayerHead" parent="." instance=ExtResource( 3 )]

[node name="BulletSpawn" parent="PlayerHead" index="0"]
position = Vector2( 24, -4 )

[node name="Head" parent="PlayerHead" index="1"]
material = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 11 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 14 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/Start = SubResource( 7 )
anims/Stop = SubResource( 8 )

[node name="Dash" parent="." instance=ExtResource( 6 )]

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="dashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="PlayerHead"]
[editable path="Hurtbox"]
